2004-03-05  John BouAntoun  <jba-mono@optusnet.com.au>
	
	* src/AddIns/DisplayBindings/SourceEditor/Gui/Dialogs/ReplaceDialog.cs : 
	changed Gtk.Combo's to Gnome.Entry's to fix bug where MD would lock up with 
	hidden "Not Found" Dialog popping up under the find dialog
	* src/AddIns/DisplayBindings/SourceEditor/Gui/Dialogs/ReplaceInFilesDialog.cs: 
	as above
	* data/resources/glade/texteditoraddin.glade : as above

2004-03-05  John Luke  <jluke@cfl.rr.com>
	
	* src/Main/Base/Gui/Dialogs/ReferenceDialog/AssemblyReferencePanel.cs:
	apply patch from djj734@mail.usask.ca (Doug) to fix adding a .NET
	assembly reference by using GetFullPath, bug #55192

2004-03-05  Mike Kestner  <mkestner@ximian.com>

	* Main/Base/Services/DebuggingService.cs : add StepInto and
	implement StepOver.  Use proc.CurrentFrame where possible.

2004-03-05  John BouAntoun  <jba-mono@optusnet.com.au>

	* src/Main/Base/Gui/Dialogs/ProjectOptionsDialog.cs : added configuration 
	renaming
	* src/Main/Base/Gui/Dialogs/TreeViewOptions.cs : made InitializeComponent 
	virtual so ProjectOptionDialog could override (see above)

2004-03-04  Mike Kestner  <mkestner@ximian.com>

	* Main/Base/Services/DebuggingService.cs : add CurrentFilename and
	CurrentLineNumber props.  Fix Backtrace.

2004-03-04  Mike Kestner  <mkestner@ximian.com>

	* Main/Base/Services/DebuggingService.cs : add Started/Stopped and 
	Paused/Resumed events plus a CurrentFrame property.

2004-03-04  Mike Kestner  <mkestner@ximian.com>

	* Main/Base/Services/DebuggingService.cs : add Pause/Resume and make
	IsRunning public.

2004-03-04  Todd Berman  <tberman@sevenl.net>

	* build/AddIns/SharpDevelopCore.addin: adding debug menu.
	* src/Main/Base/Services/DebuggingService.cs: added stub for step over.
	* src/Main/Base/Commands/DebuggerCommands.cs: added StepOver.
	* src/AddIns/DisplayBindings/SourceEditor/Gui/SourceEditorBuffer.cs:
		change current execution from red to yellow.
	* ChangeLog: formatting fixes, use this format from now on.
